tests/rosetta/out/Java/bitwise-io-2.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/bitwise-io-2.mochi:148:40: unexpected token "-65" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/bitwise-io-2.mochi:148:40

148 |   if n >= 65 && n < 91 { return upper[n-65:n-64] }
    |                                        ^

help:
  Parse error occurred. Check syntax near this location.